# ffs_rag

./: .gitignore  .pre-commit-config.yaml  Makefile  README_QDRANT.md  conceptual_theory.md  env_example  mypy.ini  pyproject.toml  readme.md  requirements.txt  ruff.toml  sceleton.md  skeleton.tar
.cursor/rules/: pyrule.mdc
data/prepared/: faq_prepared.json
data/raw/: faq_ffs.json  faq_ffs.txt  faq_ffs_raw.html
docker/: api.Dockerfile  docker-compose.yml  otel-collector-config.yaml  prometheus.yml  tempo.yaml  worker.Dockerfile
docker/grafana/dashboards/: rag_overview.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/datasources/: datasources.yml
scripts/: docker_ingest.sh  ingest_faq.py  parse_faq.py  prepare_faq_data.py  run_qdrant.sh  test_ingestion.py
src/api/: deps.py  main.py
src/api/routes/: health.py  query.py
src/rag_core/: __init__.py  bm25_qdrant.py  caching.py  chunking.py  config.py  embeddings.py  faq_parser.py  generator.py  observability.py  openrouter_client.py  pii.py  pipeline.py  prompting.py  rerankers.py  retriever.py  schema.py  vectorstore_qdrant.py
src/rag_core/embeddings/: __init__.py  embeddings.py
src/rag_core/generation/: __init__.py  generator.py  openrouter_client.py  prompting.py
src/rag_core/observability/: __init__.py  caching.py  observability.py
src/rag_core/processing/: __init__.py  chunking.py  pii.py
src/rag_core/retrieval/: __init__.py  rerankers.py  retriever.py
src/rag_core/storage/: __init__.py  bm25_qdrant.py  vectorstore_qdrant.py
src/workers/: ingest.py
tests/: README.md  conftest.py  run_tests.py  test_ingestion.py  test_reranker.py
